---------------------------------------------------------------------------------------------------
Version: 20.0.2
Date: 2020-12-05
  Features:
    - Add mod setting for starting launch count so when added to existing save the player can populate it with existing launch count.
    - Add mod setting to disable the Freeplay win message on first rocket launched. Defautls to disable it.
  Changes:
  Bugfixes:
  Info:
    - Version numbers back on track, previous version released as 1.1.0 by mistake.
---------------------------------------------------------------------------------------------------
Version: 20.0.1
Date: 2020-11-27
  Features:
    - Update for Factorio 1.1 release.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.0
Date: 2020-02-25
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: