@@ -8,10 +8,10 @@ Configurable behaviour
 ================
 
  - Per player shortcut to toggle the GUI on and off with the image of a bullseye.
- - Mod settings to set the goal type; rockets launched or the number of satellites or fish launched in to space.
+ - Mod settings to set the goal type; rockets launched, satellites launched, fish launched or custom item name launched in to space.
  - Mod setting to set the starting target value.
  - If the target value is 0 or less then no target value is shown in the GUI, just the number launched. This is for usage as a counter, rather than a goal.
- - Mod setting to set if the goal type is shown as a title or not. The goal type and number launched out of target are always shown in the GUI.
+ - Mod setting to set if the goal type is shown as a title or not. The goal type icon and number launched out of target are always shown in the GUI.
  - Mod setting to set the winning GUI title and message for when the goal is reached. Both are optional and if both left blank no winning message is shown. Message GUI doesn't end game.
  - A list of rockets and their contents are kept by the mod so all settings can be changed mid game and will having previous efforts accounted for.
  - Mod setting to set a starting completed count. For use when adding the mod to an existing save.
