@@ -6,6 +6,7 @@ rocket_target-winning_title=Victory GUI title
 rocket_target-winning_message=Victory GUI message
 rocket_target-starting_completed_count=Starting completed count
 rocket_target-disable_freeplay_rocket_win=Disable freeplay rocket win
+rocket_target-custom_item_tracked=Custom item tracked
 
 [mod-setting-description]
 rocket_target-starting_goal=The value of the goal before anything is added via command.
@@ -15,17 +16,20 @@ rocket_target-winning_title=The title of the GUI shown when goal is reached.
 rocket_target-winning_message=The message in the GUI shown when the goal is reached.
 rocket_target-starting_completed_count=The number of the goal item type already launched. Useful if adding the mod to an existing map.
 rocket_target-disable_freeplay_rocket_win=Disable the win message in Freeplay when you launch the first rocket.
+rocket_target-custom_item_tracked=The custom prototype item name to be tracked. Must be a valid internal prototype item name in the game. Only tracked if the Item Tracked mod setting is set to Custom.
 
 [string-mod-setting]
 rocket_target-goal_type-rocket-silo-rocket=Rockets Launched
 rocket_target-goal_type-satellite=Satellites Launched
 rocket_target-goal_type-raw-fish=Fish Launched
+rocket_target-goal_type-custom=Custom Item Launched
 
 [api-description]
 rocket_target_increase_goal=: Increase the goal, arguments: increase_number, description_string
 
 [gui-caption]
 rocket_target-overviewValue-label=__1__ / __2__
+rocket_target-goalType-label=__1__ launched
 
 [gui-tooltip]
 rocket_target-winningGuiCloseButton-sprite-button=Close GUI and return to the game
