@@ -1,5 +1,4 @@
 Next:
-    - Add mod setting for an item prototype name, item display name and item image to be trackerd and listed. For flexible compatibility with anything.
 
 Future Ideas:
 	- popup gui to show which rockets/names have been done from shortcut item and shortcut key to open. This needs working out how to account for the starting goal and initial launchs.
